Fix typo in contact composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Afiqyajid/contact",
+    "name": "afiqyajid/contact",
     "description": "example learning for package",
     "type": "library",
     "license": "MIT",
