fix service provider for auto discovery

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Afiqyajid\\Contact\\ServiceProvider"
+                "Afiqyajid\\Contact\\ContactServiceProvider"
             ]
         }
     }
